--- a/cssjd.css
+++ b/cssjd.css
@@ -46,7 +46,6 @@ a:hover {
 body {
   font-family: var(--font-family);
 }
-
 nav {
   position: sticky;
   top: 0;
@@ -97,10 +96,10 @@ nav ul li {
 .hero {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 2.5rem;
-  max-width: 68.75rem;
-  margin-top: 50px;
+  justify-content: space-around;
+  gap: 4rem;
+  max-width: 80rem;
+  margin-top: -50px;
 }
 
 .hero img {
@@ -109,7 +108,7 @@ nav ul li {
 }
 
 .bio {
-  width: 25rem;
+  width: 30rem;
   padding: 0.625rem;
   border-radius: 6px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
@@ -164,7 +163,8 @@ nav ul li {
   max-width: 68.75rem;
   margin: auto;
   text-align: center;
-  margin-top: 2.5rem;
+  margin-top: 8rem;
+  margin-bottom: 8rem;
 }
 
 .skill-header {
@@ -172,7 +172,7 @@ nav ul li {
 }
 
 .skills-wrapper img {
-  padding: 1rem;
+  padding: 0rem;
 }
 
 .icon {
@@ -182,20 +182,20 @@ nav ul li {
 .icon-card {
   background-color: #fff;
   border-radius: 11px;
-  box-shadow: 0 3px 10px var(--secondary-shadow);
+
   padding: 10px;
   margin: 10px;
 }
 /*Project section style*/
 .projects {
-  background-color: var(--bg-color);
+  background-color: #fcfcfc00;
   padding: 32px 0;
   margin-top: 2rem;
 }
 
 .project-pic {
-  width: 65%;
-  height: 60%;
+  width: 55%;
+  height: auto;
 }
 
 .projects-container {
