--- a/cssjd.css
+++ b/cssjd.css
@@ -97,14 +97,13 @@ nav ul li {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0rem;
-
-  margin-top: -50px;
+  gap: 5rem;
+  margin-top: -5em;
 }
 
 .hero img {
   height: 37.5rem;
-  width: 37.5rem;
+  width: 35.5rem;
 }
 
 .bio {
@@ -113,6 +112,7 @@ nav ul li {
   border-radius: 6px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
   text-align: start;
+  margin-right: 5em;
 }
 
 .bio h1 {
@@ -304,7 +304,7 @@ nav ul li {
 
 /*Media queries*/
 /*changes reflects on screen with a width of 720px and below*/
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   nav {
     padding: 1.5rem 1rem;
   }
@@ -363,6 +363,7 @@ nav ul li {
   .bio {
     margin-top: 7rem;
     width: 20.5rem;
+    margin-left: 5em;
   }
   /*more about section */
   .more-about {
@@ -391,10 +392,29 @@ nav ul li {
   }
 
   .project-container {
-    width: 20.875rem;
+    width: 25.875rem;
   }
   /*Contact form responsive*/
   .contact-form-container {
     max-width: 23.75rem;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .hero img {
+    height: 37.5rem;
+    width: 23rem;
+  }
+
+  .bio {
+    width: 18.3rem;
+  }
+
+  .project-container {
+    width: 17.875rem;
+  }
+
+  .contact-form-container {
+    max-width: 17.75rem;
   }
 }
