--- a/cssjd.css
+++ b/cssjd.css
@@ -111,7 +111,7 @@ nav ul li {
   padding: 0.625rem;
   border-radius: 6px;
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-  text-align: start;
+  text-align: justify;
   margin-right: 5em;
 }
 
@@ -147,14 +147,12 @@ nav ul li {
   flex-direction: column;
   right: 1%;
   top: 50%;
-
-  margin-left: 35em;
   align-items: flex-end;
   position: sticky;
 }
 
 .socicon {
-  width: 5rem;
+  width: 2rem;
   height: 2rem;
 }
 
@@ -304,7 +302,8 @@ nav ul li {
 
 /*Media queries*/
 /*changes reflects on screen with a width of 720px and below*/
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 920px) {
   nav {
     padding: 1.5rem 1rem;
   }
@@ -348,7 +347,12 @@ nav ul li {
   }
 }
 /*this is for responsive bewsite sections*/
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 920px) {
+  .body {
+    display: flex;
+    flex-direction: column;
+  }
+
   .hero {
     margin-top: -4rem;
     flex-direction: column;
@@ -356,8 +360,112 @@ nav ul li {
   }
 
   .hero img {
-    height: 33.5rem;
-    width: 30rem;
+    height: 30.5rem;
+    width: 27rem;
+  }
+
+  .bio {
+    margin-top: 7rem;
+    width: 20.5rem;
+    margin-left: 5em;
+    text-align: center;
+  }
+  /*more about section */
+  .more-about {
+    margin-top: 4rem;
+    padding: 1rem 3.5rem;
+  }
+
+  .more-about h2 {
+    text-align: center;
+  }
+
+  .more-about p {
+    text-align: justify;
+  }
+  /*icons resize*/
+  .icon {
+    width: 5.875rem;
+    height: 5.25rem;
+  }
+  .skills-wrapper img {
+    padding: 0rem;
+  }
+  /*Project section responsive*/
+  .projects-container {
+    flex-direction: column;
+  }
+
+  .project-container {
+    width: 25.875rem;
+  }
+  /*Contact form responsive*/
+  .contact-form-container {
+    max-width: 23.75rem;
+  }
+}
+/*desde aqui 720*/
+
+@media screen and (max-width: 720px) {
+  nav {
+    padding: 1.5rem 1rem;
+  }
+
+  nav ul {
+    position: fixed;
+    background-color: var(--bg-color);
+    flex-direction: column;
+    top: 86px;
+    left: 10%;
+    width: 80%;
+    text-align: center;
+    transform: translateX(120%);
+    transition: transform 0.5s ease-in;
+  }
+
+  nav ul li {
+    margin: 8px;
+  }
+  nav ul {
+    position: fixed;
+    background-color: var(--bg-color);
+    flex-direction: column;
+    top: 86px;
+    left: 10%;
+    width: 80%;
+    text-align: center;
+    transform: translateX(120%);
+    transition: transform 0.5s ease-in;
+  }
+
+  nav ul li {
+    margin: 8px;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+
+  nav ul.show {
+    transform: translateX(0);
+  }
+}
+/*this is for responsive bewsite sections*/
+@media screen and (max-width: 720px) {
+  .body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero {
+    margin-top: -4rem;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .hero img {
+    height: 30.5rem;
+    width: 27rem;
   }
 
   .bio {
@@ -401,9 +509,14 @@ nav ul li {
 }
 
 @media screen and (max-width: 420px) {
+  .body {
+    display: flex;
+    flex-direction: column;
+  }
+
   .hero img {
-    height: 37.5rem;
-    width: 23rem;
+    height: 20.5rem;
+    width: 20rem;
   }
 
   .bio {
