--- a/assests-cv/style.css
+++ b/assests-cv/style.css
@@ -2,7 +2,9 @@
   font-family: "Arimo", sans-serif;
   font-family: "Chakra Petch", sans-serif;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: x-large;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 .main {
@@ -35,7 +37,12 @@
 .namebox {
   text-align: center;
   margin-top: 20%;
+  font-size: 30px;
 }
+.namebox h2 {
+  font-size: 25px;
+}
+
 .contact {
   text-align: center;
   margin-top: 30%;
@@ -56,9 +63,10 @@
 .icon-container {
   filter: invert(100%);
   margin-right: 20px;
-  border-radius: 30px;
+  border-radius: 10px;
   padding: 5px;
-  box-shadow: 50;
+
+  box-shadow: 1px 0px 10px white;
 }
 #links {
   color: gainsboro;
@@ -86,16 +94,16 @@
 /*progress bars*/
 .progresbars {
   appearance: none; /* Remove default styling */
-  width: 100%; /* Make the progress bar fill its container */
-  height: 20px; /* Set the height of the progress bar */
-  background-color: #f0f0f0; /* Set a background color */
-  border-radius: 10px; /* Add rounded corners */
-  overflow: hidden; /* Hide overflowing content (percentage) */
+  width: 100%;
+  height: 20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .progresbars::-webkit-progress-value {
-  background-color: #f0f0f0; /* Change the progress bar color */
-  border-radius: 10px; /* Maintain rounded corners for the filled part */
+  background-color: #f0f0f0;
+  border-radius: 10px;
 }
 
 /*article section profile, work experience*/
@@ -127,6 +135,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  color: #3f6844;
 }
 
 .flex-container {
@@ -134,11 +143,11 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 4em;
-  margin-left: 0.9em;
+  margin-left: 3.5em;
 }
 
 .column {
-  flex-basis: calc(33.33% - 20px); /* 3 columns */
+  flex-basis: calc(33.33% - 20px);
   padding: 10px;
   margin: 10px;
   box-sizing: border-box;
@@ -149,6 +158,10 @@
   text-align: start;
   padding: 10px;
 }
+/*education section*/
+.educationbox {
+  margin-left: 2.5em;
+}
 
 /*Hobbies section*/
 
@@ -157,7 +170,7 @@
   justify-content: space-between; /* justificar el contenidocon espacio entre los íconos */
   align-items: center;
   margin-right: 20%;
-  margin-left: 3%;
+  margin-left: 4.5em;
   margin-bottom: 5%;
 }
 .hobbieimg {
@@ -175,7 +188,7 @@
 }
 
 .h2hobbies {
-  margin-left: 3%;
+  color: #3f6844;
 }
 /*footer*/
 
